Fixed spacing in nav bar logo, logout button, and migrated friends table

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 17%;
+  padding: 3px 17%;
   
 }
 
@@ -34,7 +34,7 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 10px; */
-  margin-top: 7px;
+  margin-top: 1px;
   background-color: transparent;
   border: none;
   color: white;
