--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -1,6 +1,6 @@
  
 .signup-introduce-welcome {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
   color: #999;
